fix: table wrapping and new build

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,55 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Custom scrollbar styles for the chat window */
-.chat-window::-webkit-scrollbar {
-  width: 6px;
-}
-
-.chat-window::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.chat-window::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
-}
-
-/* Firefox scrollbar styling */
-.chat-window {
-  scrollbar-width: thin;
-  scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
-}
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-/* Define a custom CSS variable for the primary text color */
-:root {
-  --text-primary: #253E54;
-}
-
-body {
-  color: var(--text-primary) !important;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.chat-bubble-bot a {
-  color: blue;
-}
-
-.portone-chat-widget {
+.portone-chat-widget-hgnj {
   position: fixed;
   bottom: 0;
   right: 0;
-  z-index: 9999; /* Increase this value if needed */
+  z-index: 9999;
+
+  /* Custom scrollbar styles for the chat window */
+  .chat-window::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  .chat-window::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .chat-window::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+  }
+
+  /* Firefox scrollbar styling */
+  .chat-window {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+  }
+
+  /* Define a custom CSS variable for the primary text color */
+  :root {
+    --text-primary: #253E54;
+  }
+
+  body {
+    color: var(--text-primary) !important;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .chat-bubble-bot a {
+    color: blue;
+  }
+}
+
+.prose table {
+  width: 100%;
+  table-layout: fixed; /* Ensures that the table uses the container width */
+}
+
+.prose th,
+.prose td {
+  word-break: break-word;
+  overflow-wrap: break-word;
+  white-space: normal; /* Allow wrapping within table cells */
 }
